--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-streamlit==1.25.0
-torch==1.13.1
-transformers==4.21.0
+streamlit==1.28.1
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+torchaudio==2.0.2+cpu
+transformers==4.35.0
